fix svg visible

--- a/src/assets/s3d/styles/pages/-s3d-svg.scss
+++ b/src/assets/s3d/styles/pages/-s3d-svg.scss
@@ -27,7 +27,7 @@
       z-index: 55;
 
       svg {
-        opacity: 1;
+        opacity: 0;
         visibility: visible;
         pointer-events: painted;
       }
