--- a/src/assets/s3d2/styles/templates/flyby/svg/polygons.scss
+++ b/src/assets/s3d2/styles/templates/flyby/svg/polygons.scss
@@ -9,9 +9,37 @@ polygon[data-type='flyby'] {
   stroke: var(--border-gray-200);
 }
 
+// polygon[data-type='flat'] {
+//   // fill: var(--hover-overlays-transparent-32);
+//   // fill: var(--color-surface-success-available-transparent-20);
+
+//   &[data-sale='2'],
+//   &[data-sale='3'],
+//   &[data-sale='4'],
+//   &[data-sale='5'],
+//   &[data-sale='6'],
+//   &[data-sale='0'] {
+//     fill: var(--color-special-accent-sold-overlays-transparent-16);
+//     cursor: auto;
+//   }
+
+//   &.active,
+//   &.polygon__selected {
+//     // fill: var(--color-surface-semantic-success) !important;
+//     fill: rgba(theme_vars.$color-semantic-success, 0.75) !important;
+//     pointer-events: all;
+//     stroke: rgb(255, 255, 255) !important;
+//   }
+//   &.polygon__filter-deselect {
+//     fill: transparent;
+//   }
+// }
+
 polygon[data-type='flat'] {
-  // fill: var(--hover-overlays-transparent-32);
-  // fill: var(--color-surface-success-available-transparent-20);
+  &[data-sale='1'] {
+    stroke: var(--border-gray-200);
+    cursor: pointer;
+  }
 
   &[data-sale='2'],
   &[data-sale='3'],
@@ -19,19 +47,54 @@ polygon[data-type='flat'] {
   &[data-sale='5'],
   &[data-sale='6'],
   &[data-sale='0'] {
-    fill: var(--color-special-accent-sold-overlays-transparent-16);
     cursor: auto;
+  }
+
+  &[data-sale='1'] {
+    // fill: $sale-1;
+    fill: green;
+    fill-opacity: 0.55;
+    stroke: var(--border-gray-200);
+  }
+  &[data-sale='0'] {
+    // fill: $sale-0;
+    fill: green;
+    fill-opacity: 0.55;
+    stroke: var(--border-gray-200);
+  }
+
+  &[data-sale='1'] {
+    // fill: $sale-1;
+    fill: green;
+    fill-opacity: 0.55;
+    stroke: var(--border-gray-200);
+  }
+
+  &[data-sale='2'] {
+    // fill: $sale-2;
+    fill: green;
+    fill-opacity: 0.55;
+    stroke: var(--border-gray-200);
+  }
+
+  &[data-sale='3'] {
+    // fill: $sale-3;
+    fill: green;
+    fill-opacity: 0.55;
+    stroke: var(--border-gray-200);
   }
 
   &.active,
   &.polygon__selected {
     // fill: var(--color-surface-semantic-success) !important;
-    fill: rgba(theme_vars.$color-semantic-success, 0.75) !important;
+    // fill: rgba($color-semantic-success, 0.75) !important;
+    fill: greenyellow;
     pointer-events: all;
     stroke: rgb(255, 255, 255) !important;
   }
   &.polygon__filter-deselect {
     fill: transparent;
+    stroke: none;
   }
 }
 
